welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:2: error: not found: value x
	x:Int
        ^fizzBuzz:3: error: not found: value x
	if (a==x*3) {
               ^fizzBuzz:6: error: not found: value x
	else if (a==x*2) {
                    ^