welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
	x:Int
	if (a==x*3) {
		return "Fizz"
	}
	else if (a==x*2) {
		return "Buzz"
	}
	else {
		return "a"
	}
}
